[project]
name = "coremltools"
version = "8.0"
description = "Community Tools for Core ML"
authors = [{ name = "Apple Inc.", email = "coremltools@apple.com" }]
dependencies = [
    "setuptools>=75.3.0",
    "attrs>=21.3.0",
    "cattrs",
    "numpy >= 1.14.5",
    "packaging",
    "protobuf >= 3.1.0",
    "pyaml",
    "sympy",
    "tqdm",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "BSD" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/apple/coremltools"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.pypi-dependencies]
coremltools = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.py37.dependencies]
python = "3.7.*"

[tool.pixi.feature.py38.dependencies]
python = "3.8.*"

[tool.pixi.feature.py39.dependencies]
python = "3.9.*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
